--- a/src/app/databinding/databinding.component.html
+++ b/src/app/databinding/databinding.component.html
@@ -8,3 +8,7 @@
 <h3>Custom Property Binding</h3>
 
 <app-property-binding [property]="42"></app-property-binding>
+
+<h3>Event Binding</h3>
+
+<app-event-binding></app-event-binding>
