--- a/src/app/databinding/databinding.component.html
+++ b/src/app/databinding/databinding.component.html
@@ -11,4 +11,4 @@
 
 <h3>Event Binding</h3>
 
-<app-event-binding (clicked)="onClick($event)"></app-event-binding>
+<app-event-binding (tappp)="onClick($event)"></app-event-binding>
