--- a/src/app/databinding/databinding.component.html
+++ b/src/app/databinding/databinding.component.html
@@ -12,3 +12,7 @@
 <h3>Event Binding</h3>
 
 <app-event-binding (tappp)="onClick($event)"></app-event-binding>
+
+<h3>Two-way Binding</h3>
+
+<app-two-way-binding></app-two-way-binding>
